# testPi

./: .gitignore  CMakeLists.txt  README.md  functions  load  packages
doc/: issue.md  manual.md
include/: test.h  thread.h
src/: gpio.c  i2c.c  pins.c  serial.c  spi.c  test.c  thread.c  uart.c
src/ioctl/: gpio.c  spi.c
